Update 'backend-tests-go-zxitbtnu' component image to: quay.io/rhtap_qe/backend-tests-go-zxitbtnu:azure-d54fc817a7955b6d0552951186632809547f43c0

--- a/components/backend-tests-go-zxitbtnu/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-zxitbtnu/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-zxitbtnu
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-zxitbtnu:azure-d54fc817a7955b6d0552951186632809547f43c0
+          name: container-image
